--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Samojlov_AV_Homework_Module_10_number_3_1</string>
+    <string name="toolbar_title">mod. 9 № 3-1</string>
     <string name="textVieWTV">Поле для вывода информации</string>
     <string name="editTextET">Поле для ввода информации</string>
     <string name="saveDataBT">Сохранить данные</string>
